saves/test/demo_full_20240802_193545/lemmings1/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp lemmings1_tb.v lemmings1.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
lemmings1_tb.v:144: $finish called at 250000 (1ps)

iverilog cmd 2 error:

